@@ -8,8 +8,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 import timeclock.db.DatabaseConnection;
 import timeclock.Configuration;
-import timeclock.punches.ShowPunches; // For ShowPunches.isValid
-import org.mindrot.jbcrypt.BCrypt;
+import timeclock.punches.ShowPunches; 
 
 import java.io.IOException;
 import java.net.URLEncoder;
@@ -21,6 +20,9 @@ import java.sql.SQLException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.time.ZoneId;
+import java.time.LocalDate; 
+import java.time.format.DateTimeFormatter; 
+import org.mindrot.jbcrypt.BCrypt;
 
 @WebServlet("/LoginServlet")
 public class LoginServlet extends HttpServlet {
@@ -29,207 +31,87 @@ public class LoginServlet extends HttpServlet {
 
     private static final int ADMIN_DEFAULT_TIMEOUT_MINUTES = 120;
     private static final int USER_DEFAULT_TIMEOUT_SECONDS = 30 * 60;
-    private static final String PACIFIC_TIME_FALLBACK = "America/Los_Angeles";
     private static final String DEFAULT_TENANT_FALLBACK_TIMEZONE = "America/Denver";
-    private static final String UTC_ZONE_ID_SERVLET = "UTC";
 
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         String companyIdentifier = request.getParameter("companyIdentifier");
         String email = request.getParameter("email");
         String password = request.getParameter("password");
-        String browserTimeZoneIdStr = request.getParameter("browserTimeZone");
         HttpSession session = request.getSession(true);
 
-        logger.info("[LoginServlet] Login attempt for CoID: " + companyIdentifier + ", email: " + email + ", BrowserTZ: " + browserTimeZoneIdStr);
+        boolean isFirstLoginFlow = session.getAttribute("isFirstLoginAfterPinSet") != null;
 
         if (!ShowPunches.isValid(companyIdentifier) || !ShowPunches.isValid(email) || !ShowPunches.isValid(password)) {
-            session.setAttribute("errorMessage", "Company ID, email, and PIN are required.");
-            response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Company ID, email, and PIN are required.", StandardCharsets.UTF_8.name()));
+            response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Company ID, email, and PIN are required.", StandardCharsets.UTF_8));
             return;
         }
 
         Connection conn = null;
-        PreparedStatement psTenant = null; ResultSet rsTenant = null;
-        PreparedStatement psUser = null; ResultSet rsUser = null;
-        
-        Boolean isWizardMode = (Boolean) session.getAttribute("startSetupWizard"); // Get as Boolean
-        String wizardStepFromSignup = (String) session.getAttribute("wizardStep");
-        Integer wizardAdminEid = (Integer) session.getAttribute("wizardAdminEid");
-
         try {
             conn = DatabaseConnection.getConnection();
-            String tenantSql = "SELECT TenantID, AdminEmail FROM tenants WHERE CompanyIdentifier = ?";
-            psTenant = conn.prepareStatement(tenantSql);
+            String tenantSql = "SELECT TenantID FROM tenants WHERE CompanyIdentifier = ?";
+            PreparedStatement psTenant = conn.prepareStatement(tenantSql);
             psTenant.setString(1, companyIdentifier.trim());
-            rsTenant = psTenant.executeQuery();
+            ResultSet rsTenant = psTenant.executeQuery();
 
-            int tenantId = -1;
-            String tenantPrimaryAdminEmail = null;
-
-            if (rsTenant.next()) {
-                tenantId = rsTenant.getInt("TenantID");
-                tenantPrimaryAdminEmail = rsTenant.getString("AdminEmail");
-            } else {
-                logger.warning("[LoginServlet] Tenant not found for CoID: " + companyIdentifier);
-                session.setAttribute("errorMessage", "Invalid Company ID or credentials.");
-                response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Invalid Company ID or credentials.", StandardCharsets.UTF_8.name()) + "&companyIdentifier=" + URLEncoder.encode(companyIdentifier, StandardCharsets.UTF_8.name()));
+            if (!rsTenant.next()) {
+                response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Invalid Company ID.", StandardCharsets.UTF_8));
                 return;
             }
-            
-            String userSql = "SELECT EID, PasswordHash, PERMISSIONS, FIRST_NAME, LAST_NAME, RequiresPasswordChange, ACTIVE " +
-                             "FROM EMPLOYEE_DATA WHERE LOWER(EMAIL) = LOWER(?) AND TenantID = ?";
-            psUser = conn.prepareStatement(userSql);
+            int tenantId = rsTenant.getInt("TenantID");
+
+            String userSql = "SELECT EID, PasswordHash, PERMISSIONS, FIRST_NAME, LAST_NAME, ACTIVE, RequiresPasswordChange FROM EMPLOYEE_DATA WHERE LOWER(EMAIL) = LOWER(?) AND TenantID = ?";
+            PreparedStatement psUser = conn.prepareStatement(userSql);
             psUser.setString(1, email.trim().toLowerCase());
             psUser.setInt(2, tenantId);
-            rsUser = psUser.executeQuery();
+            ResultSet rsUser = psUser.executeQuery();
 
-            if (rsUser.next()) {
-                String storedHash = rsUser.getString("PasswordHash");
-                boolean isActive = rsUser.getBoolean("ACTIVE");
-                int eid = rsUser.getInt("EID");
-                String userPermissionsFromDB = rsUser.getString("PERMISSIONS");
-                String userFirstName = rsUser.getString("FIRST_NAME");
-                String userLastName = rsUser.getString("LAST_NAME");
-                boolean dbRequiresPasswordChange = rsUser.getBoolean("RequiresPasswordChange");
-
-                logger.info("[LoginServlet] User EID " + eid + " DB data: Perms='" + userPermissionsFromDB +
-                            "', ReqPassChange=" + dbRequiresPasswordChange + ", Active=" + isActive);
-
-                if (!isActive) {
-                    logger.warning("[LoginServlet] Inactive user EID: " + eid);
-                    session.setAttribute("errorMessage", "This user account is inactive.");
-                    response.sendRedirect("login.jsp?error=" + URLEncoder.encode("This user account is inactive.", StandardCharsets.UTF_8.name()) + "&companyIdentifier=" + URLEncoder.encode(companyIdentifier, StandardCharsets.UTF_8.name()) + "&adminEmail=" + URLEncoder.encode(email, StandardCharsets.UTF_8.name()));
+            if (rsUser.next() && BCrypt.checkpw(password, rsUser.getString("PasswordHash"))) {
+                if (!rsUser.getBoolean("ACTIVE")) {
+                    response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Account is inactive.", StandardCharsets.UTF_8));
                     return;
                 }
 
-                if (BCrypt.checkpw(password, storedHash)) {
-                    logger.info("[LoginServlet] Password verified for EID: " + eid);
+                int eid = rsUser.getInt("EID");
+                String userPermissions = rsUser.getString("PERMISSIONS");
+                session.setAttribute("EID", eid);
+                session.setAttribute("UserFirstName", rsUser.getString("FIRST_NAME"));
+                session.setAttribute("UserLastName", rsUser.getString("LAST_NAME"));
+                session.setAttribute("Permissions", userPermissions);
+                session.setAttribute("TenantID", tenantId);
+                session.setAttribute("CompanyIdentifier", companyIdentifier.trim());
+                session.setAttribute("Email", email.trim().toLowerCase());
+                
+                // ✅ FIX: This is the fully corrected logic block for the wizard flow.
+                if (isFirstLoginFlow && "Administrator".equalsIgnoreCase(userPermissions)) {
+                    logger.info("First admin login detected. Continuing setup wizard to admin profile review.");
+                    session.removeAttribute("isFirstLoginAfterPinSet"); // Clean up the flag
+                    session.setAttribute("startSetupWizard", true);
+                    session.setAttribute("wizardStep", "employees_prompt"); // This step name is what employees.jsp uses to initiate the flow
+                    session.setAttribute("wizardAdminEid", eid);
                     
-                    session.setAttribute("EID", eid);
-                    session.setAttribute("UserFirstName", userFirstName);
-                    session.setAttribute("UserLastName", userLastName);
-                    session.setAttribute("Permissions", userPermissionsFromDB);
-                    session.setAttribute("TenantID", tenantId);
-                    session.setAttribute("CompanyIdentifier", companyIdentifier.trim());
-                    session.setAttribute("Email", email.trim().toLowerCase());
-                    session.setAttribute("RequiresPasswordChange", Boolean.valueOf(dbRequiresPasswordChange)); // Store the flag from DB
-                    
-                    if (ShowPunches.isValid(tenantPrimaryAdminEmail)) {
-                        session.setAttribute("TenantPrimaryAdminEmail", tenantPrimaryAdminEmail.trim().toLowerCase());
-                    }
-
-                    String effectiveUserTimeZoneId = null;
-                    if (ShowPunches.isValid(browserTimeZoneIdStr) && !"Unknown".equalsIgnoreCase(browserTimeZoneIdStr)) {
-                        try {
-                            ZoneId.of(browserTimeZoneIdStr);
-                            effectiveUserTimeZoneId = browserTimeZoneIdStr;
-                            logger.info("[LoginServlet][TZ] Using Browser Detected TimeZone: " + effectiveUserTimeZoneId);
-                        } catch (Exception e) {
-                            logger.warning("[LoginServlet][TZ] Invalid Browser TimeZone received: '" + browserTimeZoneIdStr + "'. Proceeding to next fallback.");
-                        }
-                    }
-                    if (!ShowPunches.isValid(effectiveUserTimeZoneId)) {
-                        String tenantDefaultTz = Configuration.getProperty(tenantId, "DefaultTimeZone");
-                        if (ShowPunches.isValid(tenantDefaultTz)) {
-                            effectiveUserTimeZoneId = tenantDefaultTz;
-                            logger.info("[LoginServlet][TZ] Using Tenant DefaultTimeZone from SETTINGS: " + effectiveUserTimeZoneId);
-                        } else {
-                            effectiveUserTimeZoneId = DEFAULT_TENANT_FALLBACK_TIMEZONE;
-                            logger.info("[LoginServlet][TZ] Tenant DefaultTimeZone not set or invalid in DB. Using application default for tenant: " + effectiveUserTimeZoneId);
-                        }
-                    }
-                    if (!ShowPunches.isValid(effectiveUserTimeZoneId)) {
-                        effectiveUserTimeZoneId = PACIFIC_TIME_FALLBACK;
-                        logger.warning("[LoginServlet][TZ] All other timezone sources failed. Using System Fallback (Pacific Time): " + effectiveUserTimeZoneId);
-                    }
-                    try {
-                        ZoneId.of(effectiveUserTimeZoneId);
-                    } catch (Exception e) {
-                        logger.log(Level.SEVERE, "[LoginServlet][TZ] CRITICAL: Final effectiveUserTimeZoneId '" + effectiveUserTimeZoneId + "' is invalid. Defaulting to UTC for session safety.", e);
-                        effectiveUserTimeZoneId = UTC_ZONE_ID_SERVLET;
-                    }
-                    session.setAttribute("userTimeZoneId", effectiveUserTimeZoneId);
-                    logger.info("[LoginServlet][TZ] Final userTimeZoneId set in session: " + effectiveUserTimeZoneId + " for EID: " + eid);
-                    
-                    // --- Wizard Logic Re-check ---
-                    logger.info("[LoginServlet] Before wizard continuation check: isWizardMode=" + isWizardMode +
-                                ", wizardStepFromSignup='" + wizardStepFromSignup + "'" +
-                                ", wizardAdminEid=" + wizardAdminEid + ", loggedInEid=" + eid +
-                                ", dbRequiresPasswordChange=" + dbRequiresPasswordChange);
-
-                    if (Boolean.TRUE.equals(isWizardMode) && "loginForPinChange".equals(wizardStepFromSignup) && wizardAdminEid != null && wizardAdminEid.equals(eid)) {
-                        logger.info("[LoginServlet] Wizard mode conditions met for PIN change.");
-                        session.setAttribute("startSetupWizard", Boolean.TRUE); 
-                        session.setAttribute("wizardAdminEid", wizardAdminEid); 
-                        session.setAttribute("wizardStep", "pinChangePending"); 
-                    } else {
-                        logger.info("[LoginServlet] Not in specific wizard pin change flow, or EID mismatch. Clearing general wizard flags.");
-                        session.removeAttribute("startSetupWizard");
-                        session.removeAttribute("wizardStep");
-                        session.removeAttribute("wizardAdminEid");
-                        session.removeAttribute("CompanyNameSignup");
-                        session.removeAttribute("AdminFirstNameSignup");
-                    }
-                    
-                    int timeoutInSeconds; // Determine session timeout
-                    // ... (session timeout logic as before) ...
-                    if ("Administrator".equalsIgnoreCase(userPermissionsFromDB)) {
-                        String adminTimeoutMinutesStr = Configuration.getProperty(tenantId, "AdminSessionTimeoutMinutes", String.valueOf(ADMIN_DEFAULT_TIMEOUT_MINUTES));
-                        try {
-                            timeoutInSeconds = Integer.parseInt(adminTimeoutMinutesStr) * 60;
-                            if (timeoutInSeconds <= 0) timeoutInSeconds = ADMIN_DEFAULT_TIMEOUT_MINUTES * 60;
-                        } catch (NumberFormatException e) { timeoutInSeconds = ADMIN_DEFAULT_TIMEOUT_MINUTES * 60; }
-                        logger.info("[LoginServlet] Setting Admin session timeout to " + (timeoutInSeconds/60) + " minutes.");
-                    } else {
-                        String userTimeoutSecondsStr = Configuration.getProperty(tenantId, "UserSessionTimeoutSeconds", String.valueOf(USER_DEFAULT_TIMEOUT_SECONDS));
-                        try {
-                            timeoutInSeconds = Integer.parseInt(userTimeoutSecondsStr);
-                            if (timeoutInSeconds <= 0) timeoutInSeconds = USER_DEFAULT_TIMEOUT_SECONDS;
-                        } catch (NumberFormatException e) { timeoutInSeconds = USER_DEFAULT_TIMEOUT_SECONDS; }
-                        logger.info("[LoginServlet] Setting User session timeout to " + timeoutInSeconds + " seconds.");
-                    }
-                    session.setMaxInactiveInterval(timeoutInSeconds);
-
-
-                    if (dbRequiresPasswordChange) { // Use the flag read from DB
-                        logger.info("[LoginServlet] Redirecting to change_password.jsp for EID: " + eid + " as dbRequiresPasswordChange is true.");
-                        response.sendRedirect("change_password.jsp");
-                    } else {
-                        String targetPage = "User".equalsIgnoreCase(userPermissionsFromDB) ? "timeclock.jsp" : "employees.jsp";
-                        logger.info("[LoginServlet] Login successful. Redirecting to " + targetPage + " for EID: " + eid);
-                        response.sendRedirect(targetPage);
-                    }
-                } else { // Password mismatch
-                    logger.warning("[LoginServlet] Password mismatch for EID: " + eid + ", TenantID: " + tenantId);
-                    session.setAttribute("errorMessage", "Invalid Company ID or credentials.");
-                    response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Invalid Company ID or credentials.", StandardCharsets.UTF_8.name()) + "&companyIdentifier=" + URLEncoder.encode(companyIdentifier, StandardCharsets.UTF_8.name()) + "&adminEmail=" + URLEncoder.encode(email, StandardCharsets.UTF_8.name()));
+                    // Redirect to the employees page with the specific wizard action in the URL.
+                    // This is the most reliable way to trigger the correct JavaScript logic.
+                    response.sendRedirect("employees.jsp?setup_wizard=true&action=review_admin");
+                } else if (rsUser.getBoolean("RequiresPasswordChange")) {
+                    response.sendRedirect("change_password.jsp");
+                } else {
+                    // Normal login for everyone else
+                    session.removeAttribute("startSetupWizard");
+                    String targetPage = "Administrator".equalsIgnoreCase(userPermissions) ? "employees.jsp" : "timeclock.jsp";
+                    response.sendRedirect(targetPage);
                 }
-            } else { // User not found
-                logger.warning("[LoginServlet] User not found for email: " + email + " within TenantID: " + tenantId + " (CoID: " + companyIdentifier + ")");
-                session.setAttribute("errorMessage", "Invalid Company ID or credentials.");
-                response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Invalid Company ID or credentials.", StandardCharsets.UTF_8.name()) + "&companyIdentifier=" + URLEncoder.encode(companyIdentifier, StandardCharsets.UTF_8.name()) + "&adminEmail=" + URLEncoder.encode(email, StandardCharsets.UTF_8.name()));
+
+            } else {
+                response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Invalid credentials.", StandardCharsets.UTF_8));
             }
+
         } catch (SQLException e) {
-            logger.log(Level.SEVERE, "[LoginServlet] Database error during login", e);
-            session.setAttribute("errorMessage", "Database error during login. Please try again later.");
-            if (!response.isCommitted()) response.sendRedirect("login.jsp");
-        } catch (Exception e) {
-            logger.log(Level.SEVERE, "[LoginServlet] Unexpected error during login", e);
-            session.setAttribute("errorMessage", "An unexpected error occurred. Please try again.");
-            if (!response.isCommitted()) response.sendRedirect("login.jsp");
+            logger.log(Level.SEVERE, "Database error during login", e);
+            response.sendRedirect("login.jsp?error=" + URLEncoder.encode("Database error.", StandardCharsets.UTF_8));
         } finally {
-            try { if (rsUser != null) rsUser.close(); } catch (SQLException e) { logger.log(Level.FINER, "Error closing rsUser", e); }
-            try { if (psUser != null) psUser.close(); } catch (SQLException e) { logger.log(Level.FINER, "Error closing psUser", e); }
-            try { if (rsTenant != null) rsTenant.close(); } catch (SQLException e) { logger.log(Level.FINER, "Error closing rsTenant", e); }
-            try { if (psTenant != null) psTenant.close(); } catch (SQLException e) { logger.log(Level.FINER, "Error closing psTenant", e); }
-            if (conn != null) { try { conn.close(); } catch (SQLException e) { logger.log(Level.WARNING, "[LoginServlet] Failed to close DB conn", e); }}
-        }
-        
-        if (!response.isCommitted()) {
-            logger.severe("[LoginServlet] doPost completed WITHOUT an explicit redirect or response. Forcing redirect to login.");
-            session.setAttribute("errorMessage", "Login processing error. Please try again.");
-            response.sendRedirect("login.jsp");
+            if (conn != null) try { conn.close(); } catch (SQLException e) { /* ignore */ }
         }
     }
 }
